update: App Configs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+spring.jackson.time-zone=Asia/Ho_Chi_Minh
+# Configure MySQL connection
+spring.datasource.url=jdbc:mysql://localhost:3306/entry_test_db?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=yourPassword
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
