--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,9 @@ spring.jackson.time-zone=Asia/Ho_Chi_Minh
 # Configure MySQL connection
 spring.datasource.url=jdbc:mysql://localhost:3306/entry_test_db?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=yourPassword
+spring.datasource.password=dUc!2532001@
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+# JWT secure key
+security.jwt.secretKey=super key here
